--- a/ConvexHull/mainwindow.ui
+++ b/ConvexHull/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>321</width>
-    <height>288</height>
+    <width>801</width>
+    <height>558</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,41 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="GLWidget" name="openGLWidget"/>
+     <widget class="QSplitter" name="splitter">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <widget class="QWidget" name="widget" native="true">
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="0">
+         <layout class="QGridLayout" name="gridLayout_2">
+          <item row="0" column="0">
+           <widget class="QPushButton" name="genButton">
+            <property name="text">
+             <string>gen</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QPushButton" name="hullButton">
+            <property name="text">
+             <string>hull</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QPushButton" name="squareButton">
+            <property name="text">
+             <string>square</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+      <widget class="GLWidget" name="openGLWidget"/>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -25,7 +59,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>321</width>
+     <width>801</width>
      <height>17</height>
     </rect>
    </property>
