--- a/ConvexHull/mainwindow.ui
+++ b/ConvexHull/mainwindow.ui
@@ -15,33 +15,68 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+    <item row="0" column="1">
      <widget class="QSplitter" name="splitter">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <widget class="QWidget" name="widget" native="true">
-       <layout class="QGridLayout" name="gridLayout_3">
+       <layout class="QGridLayout" name="gridLayout_4">
         <item row="0" column="0">
-         <layout class="QGridLayout" name="gridLayout_2">
+         <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
-           <widget class="QPushButton" name="genButton">
+           <widget class="QLabel" name="label">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
-             <string>gen</string>
+             <string>Amount of points &amp; radius of the circle [0, 1]:</string>
             </property>
            </widget>
           </item>
           <item row="1" column="0">
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <widget class="QLineEdit" name="pointsAmount">
+              <property name="text">
+               <string>10</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="radiusCircle">
+              <property name="text">
+               <string>0.5</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+         </layout>
+        </item>
+        <item row="1" column="0">
+         <layout class="QGridLayout" name="gridLayout_2">
+          <item row="3" column="1">
            <widget class="QPushButton" name="hullButton">
             <property name="text">
              <string>hull</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="0">
+          <item row="4" column="1">
            <widget class="QPushButton" name="squareButton">
             <property name="text">
              <string>square</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QPushButton" name="genButton">
+            <property name="text">
+             <string>gen</string>
             </property>
            </widget>
           </item>
