--- a/ConvexHull/mainwindow.ui
+++ b/ConvexHull/mainwindow.ui
@@ -76,7 +76,7 @@
           <item row="4" column="1">
            <widget class="QPushButton" name="voronoiButton">
             <property name="text">
-             <string>voronoi</string>
+             <string>voronoi_boost</string>
             </property>
            </widget>
           </item>
